[package]
name = "ricors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ricolib = {path = './lib'} 
ethers = "2.0.13"
tokio = {version = "1.36.0", features = ['full']}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tui = "0.19.0"
crossterm = "0.27.0"
chrono = "0.4.33"
toml = "0.8.9"

[[bin]]
name = "ricoterm"
path = "src/main.rs"