[package]
name = "ricolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.13"
tokio = {version = "1.36.0", features = ['full']}
serde = "1.0"
serde_json = "1.0"
tui = "0.19.0"
crossterm = "0.27.0"
chrono = "0.4.33"
lazy_static = "1.4.0"
